dynamix/force-app/main/default/objects/Enquiry__c/fields/Age_of_Junk_to_Lost__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Junk_to_Lost__c</fullName>
    <defaultValue>&quot;Stage Not yet Completed.&quot;</defaultValue>
    <label>Time Spent in Junk Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>