dynamix/force-app/main/default/objects/Enquiry__c/fields/Area_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Residence__c</fullName>
    <label>Area of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cumballa Hill</fullName>
            </value>
            <value>
                <fullName>Thane West</fullName>
            </value>
            <value>
                <fullName>Goregaon</fullName>
            </value>
            <value>
                <fullName>Malad East</fullName>
            </value>
            <value>
                <fullName>Malad West</fullName>
            </value>
            <value>
                <fullName>Kandivali East</fullName>
            </value>
            <value>
                <fullName>Bandra West</fullName>
            </value>
            <value>
                <fullName>Mira Road</fullName>
            </value>
            <value>
                <fullName>Bhayandar West</fullName>
            </value>
            <value>
                <fullName>Borivali</fullName>
            </value>
            <value>
                <fullName>Andheri East</fullName>
            </value>
            <value>
                <fullName>Goregaon West</fullName>
            </value>
            <value>
                <fullName>Bandra East</fullName>
            </value>
            <value>
                <fullName>Colaba</fullName>
            </value>
            <value>
                <fullName>Santacruz East</fullName>
            </value>
            <value>
                <fullName>Lodha</fullName>
            </value>
            <value>
                <fullName>Saki Naka</fullName>
            </value>
            <value>
                <fullName>Malabar Hill</fullName>
            </value>
            <value>
                <fullName>Dahisar West</fullName>
            </value>
            <value>
                <fullName>Dahisar East</fullName>
            </value>
            <value>
                <fullName>Mulund East</fullName>
            </value>
            <value>
                <fullName>Kandivali West</fullName>
            </value>
            <value>
                <fullName>Andheri West</fullName>
            </value>
            <value>
                <fullName>Khar West</fullName>
            </value>
            <value>
                <fullName>Vile Parle</fullName>
            </value>
            <value>
                <fullName>Nerul</fullName>
            </value>
            <value>
                <fullName>Grant Road</fullName>
            </value>
            <value>
                <fullName>Khar Danda</fullName>
            </value>
            <value>
                <fullName>Saidapet</fullName>
            </value>
            <value>
                <fullName>Borivali West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>