dynamix/force-app/main/default/objects/Enquiry__c/fields/Average_Days_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Average_Days_for_Conversion__c</fullName>
    <formula>DATEVALUE(   Site_Visit_Done_Date__c   ) - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Days for Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>