dynamix/force-app/main/default/objects/Enquiry__c/fields/Brochures_Sent__c.field-meta.xml
<CustomField>
    <fullName>Brochures_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochures Sent</label>
    <type>Checkbox</type>
</CustomField>