dynamix/force-app/main/default/objects/Enquiry__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>220 - 240 L</fullName>
            </value>
            <value>
                <fullName>Less than 0.7 Cr</fullName>
            </value>
            <value>
                <fullName>0.7 - 0.8 Cr</fullName>
            </value>
            <value>
                <fullName>0.8 - 0.9 Cr</fullName>
            </value>
            <value>
                <fullName>0.9 - 1 Cr</fullName>
            </value>
            <value>
                <fullName>1 - 1.1 Cr</fullName>
            </value>
            <value>
                <fullName>1 - 1.2 Cr</fullName>
            </value>
            <value>
                <fullName>1.2 - 1.3 Cr</fullName>
            </value>
            <value>
                <fullName>1.3 - 1.4 Cr</fullName>
            </value>
            <value>
                <fullName>1.4 - 1.6 Cr</fullName>
            </value>
            <value>
                <fullName>1.6 - 1.8 Cr</fullName>
            </value>
            <value>
                <fullName>1.8 - 2 Cr</fullName>
            </value>
            <value>
                <fullName>2 - 2.2 Cr</fullName>
            </value>
            <value>
                <fullName>2.2 - 2.4 Cr</fullName>
            </value>
            <value>
                <fullName>2.4 - 2.6 Cr</fullName>
            </value>
            <value>
                <fullName>2.6 - 2.8 Cr</fullName>
            </value>
            <value>
                <fullName>2.8 - 3 Cr</fullName>
            </value>
            <value>
                <fullName>3 Cr &amp; Above</fullName>
            </value>
            <value>
                <fullName>Less than 2 Cr</fullName>
            </value>
            <value>
                <fullName>2 – 2.2 Cr</fullName>
            </value>
            <value>
                <fullName>2.2 – 2.5 Cr</fullName>
            </value>
            <value>
                <fullName>2.5 – 2.75 Cr</fullName>
            </value>
            <value>
                <fullName>2.75 – 3 Cr</fullName>
            </value>
            <value>
                <fullName>3 – 3.2 Cr</fullName>
            </value>
            <value>
                <fullName>3.2 – 3.5 Cr</fullName>
            </value>
            <value>
                <fullName>3.5 – 3.8 Cr</fullName>
            </value>
            <value>
                <fullName>4 Cr and Above</fullName>
            </value>
            <value>
                <fullName>Less than 1.8 Cr</fullName>
            </value>
            <value>
                <fullName>1.8 – 2 Cr</fullName>
            </value>
            <value>
                <fullName>1 – 1.2 Cr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>