dynamix/force-app/main/default/objects/Enquiry__c/fields/Budget_is_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Budget_is_Qualified__c</fullName>
    <label>Is Budget Qualified?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>