dynamix/force-app/main/default/objects/Enquiry__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Source__c</field>
            <operation>equals</operation>
            <valueField>$Source.Enquiry_Source__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <type>Lookup</type>
</CustomField>