dynamix/force-app/main/default/objects/Enquiry__c/fields/Campaign_FId__c.field-meta.xml
<CustomField>
    <fullName>Campaign_FId__c</fullName>
    <formula>Campaign__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>custom filter Campaign Id</label>
    <type>Text</type>
</CustomField>