dynamix/force-app/main/default/objects/Enquiry__c/fields/City_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>City_of_Residence__c</fullName>
    <label>City of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>xyz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>