dynamix/force-app/main/default/objects/Enquiry__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Jodi</fullName>
            </value>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>1.5 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK (G)</fullName>
            </value>
            <value>
                <fullName>1 BHK Jodi</fullName>
            </value>
            <value>
                <fullName>2 BHK Jodi</fullName>
            </value>
            <value>
                <fullName>3 BHK Jodi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>