dynamix/force-app/main/default/objects/Enquiry__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Enquiry Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enquiries</relationshipLabel>
    <relationshipName>Enquiries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>