dynamix/force-app/main/default/objects/Enquiry__c/fields/Create_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_and_Time__c</fullName>
    <inlineHelpText>Third Party</inlineHelpText>
    <label>Opt In</label>
    <type>DateTime</type>
</CustomField>