dynamix/force-app/main/default/objects/Enquiry__c/fields/Current_area_of_work__c.field-meta.xml
<CustomField>
    <fullName>Current_area_of_work__c</fullName>
    <label>Current area of work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>xyz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>