dynamix/force-app/main/default/objects/Enquiry__c/fields/Date_of_Enquiry_Drop__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Enquiry_Drop__c</fullName>
    <label>Date of Enquiry Drop</label>
    <type>Date</type>
</CustomField>