dynamix/force-app/main/default/objects/Enquiry__c/fields/Duplicate_Lead_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Approval_Status__c</fullName>
    <label>Duplicate Lead Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>