dynamix/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Category__c</fullName>
    <label>Enquiry Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>