dynamix/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Qualification_Tags__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Qualification_Tags__c</fullName>
    <label>Enquiry Qualification Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Non - Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>