dynamix/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Housing.com</fullName>
            </value>
            <value>
                <fullName>99 Acres</fullName>
            </value>
            <value>
                <fullName>Magic Bricks</fullName>
            </value>
            <value>
                <fullName>Common Floor</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>VDNB</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Exhibition</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Rechurned Lead</fullName>
            </value>
            <value>
                <fullName>Chatbot</fullName>
            </value>
            <value>
                <fullName>Magicbricks</fullName>
            </value>
            <value>
                <fullName>IVR Call</fullName>
            </value>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>