dynamix/force-app/main/default/objects/Enquiry__c/fields/Enquiry_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Sub_Source__c</fullName>
    <label>Enquiry Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Enquiry_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Paid</fullName>
            </value>
            <value>
                <fullName>Facebook Organic</fullName>
            </value>
            <value>
                <fullName>Instagram Paid</fullName>
            </value>
            <value>
                <fullName>Instagram Organic</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad A</fullName>
            </value>
            <value>
                <fullName>Hoarding Ad B</fullName>
            </value>
            <value>
                <fullName>TOI</fullName>
            </value>
            <value>
                <fullName>The Hindu</fullName>
            </value>
            <value>
                <fullName>Mint</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Magicbricks</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Leadgen</fullName>
            </value>
            <value>
                <fullName>99acres</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Ledgen</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Bus Shelter</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>landing page</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>passing by</fullName>
            </value>
            <value>
                <fullName>Site Branding</fullName>
            </value>
            <value>
                <fullName>youtube_discovery</fullName>
            </value>
            <value>
                <fullName>leadgen_ri</fullName>
            </value>
            <value>
                <fullName>landing_page</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>