dynamix/force-app/main/default/objects/Enquiry__c/fields/Exotel_Call__c.field-meta.xml
<CustomField>
    <fullName>Exotel_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exotel Call</label>
    <type>Checkbox</type>
</CustomField>