dynamix/force-app/main/default/objects/Enquiry__c/fields/Exotel_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Exotel_Enquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exotel Enquiry</label>
    <type>Checkbox</type>
</CustomField>