dynamix/force-app/main/default/objects/Enquiry__c/fields/First_Site_Visit_c__c.field-meta.xml
<CustomField>
    <fullName>First_Site_Visit_c__c</fullName>
    <label>First Site Visit</label>
    <type>DateTime</type>
</CustomField>