dynamix/force-app/main/default/objects/Enquiry__c/fields/Last_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Type__c</fullName>
    <label>Last Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>