dynamix/force-app/main/default/objects/Enquiry__c/fields/Latest_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Follow_Up_Date__c</fullName>
    <label>Latest Follow Up Date</label>
    <type>Date</type>
</CustomField>