dynamix/force-app/main/default/objects/Enquiry__c/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>